--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -2,29 +2,15 @@
 
 .banner {
   @include center-in-box;
-  background-image: url("../../assets/banner.png");
   background-size: cover;
   height: 200px;
   position: relative;
-  border-radius: 25px;
-  margin-bottom: 43px;
+  border-radius: $big-radius;
+  margin-bottom: $marg-under-section;
 
   &::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    @include layer;
     background-color: #000000;
     opacity: 30%;
-    border-radius: inherit;
-  }
-
-  h1 {
-    font-size: 4.8rem;
-    font-weight: 500;
-    color: $white;
-    position: relative;
-    z-index: 1;
-    margin: 77px auto;
   }
 }
