--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,4 +4,15 @@
   align-items: center;
   margin-bottom: 63px;
   padding: 40px 100px 0 100px;
+
+  .logoContainer {
+    width: 210px;
+    height: 68px;
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
