--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -1,7 +1,7 @@
-.test {
-  color: blue;
-
-  .test2 {
-    color: grey;
-  }
+.collapses {
+  padding-left: 110px;
+  padding-right: 110px;
+  display: flex;
+  flex-direction: column;
+  gap: 33px;
 }
