dev callapse with animation

--- a/src/components/Collapse/Collapse.module.scss
+++ b/src/components/Collapse/Collapse.module.scss
@@ -2,9 +2,9 @@
 
 .collapseBox {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
+  transform: translateY(-1*$little-radius);
 
   .title {
     background: $primary;
@@ -15,16 +15,47 @@
     justify-content: space-between;
     position: relative;
     z-index: 1;
+    font-weight: 500;
+    transform: translateY($little-radius);
+
+    .down {
+      transform: rotate(540deg);
+      transition: transform ease-in 0.3s;
+    }
+
+    .up {
+      transform: rotate(0);
+      transition: transform ease-in 0.3s;
+    }
   }
 
-  .content {
-    padding: 45px 20px 13px 20px;
-    background: $secondary;
-    transform: translateY(-10px);
-    border-bottom-left-radius: $little-radius;
-    border-bottom-right-radius: $little-radius;
-    position: relative;
-    z-index: 0;
-    flex-grow: 1;
+  .contentBox {
+    height: 0;
+
+    .content {
+      padding: 45px 20px 13px 20px;
+      background: $secondary;
+      border-bottom-left-radius: $little-radius;
+      border-bottom-right-radius: $little-radius;
+      z-index: 0;
+      transform-origin: top center;
+      transform: scaleY(0);
+    }
+
+    .open {
+      position: relative;
+      transform: scaleY(1);
+      transition: transform ease-in-out 250ms;
+    }
+
+    .close {
+      transform: scaleY(0);
+      transition: transform ease-in-out 250ms;
+    }
+  }
+  .animate {
+    transition: height ease-in-out 250ms;
   }
 }
+
+
