add responsive on all pages responsive

--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -8,9 +8,23 @@
   border-radius: $big-radius;
   margin-bottom: $marg-under-section;
 
+  @media screen and (max-width: 576px) {
+    border-radius: $little-radius;
+    height: 110px;
+    padding-right: 16px;
+    padding-left: 16px;
+    margin-bottom: $marg-under-section-mobile;
+  }
+
   &::after {
     @include layer;
     background-color: #000000;
     opacity: 30%;
+  }
+}
+
+.bigInLittleScreen {
+  @media screen and (max-width: 768px) {
+    height: 223px;
   }
 }
