--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -5,4 +5,9 @@
   flex-direction: column;
   gap: 33px;
 
+  @media screen and (max-width: 1200px) {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
 }
