--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -7,15 +7,36 @@
   position: relative;
   z-index: 1;
   margin: 77px auto;
-}
 
+  @media screen and (max-width: 1200px) {
+    font-size: 3.6rem;
+  }
+
+  @media screen and (max-width: 576px) {
+    font-size: 2.4rem;
+  }
+}
 
 .cardList {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  justify-content: space-between;
+  //justify-content: space-between;
   grid-gap: 50px;
   padding: 56px 50px;
   border-radius: $big-radius;
   background: $secondary;
+
+  @media screen and (max-width: 1440px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media screen and (max-width: 992px) {
+    padding: 0;
+    background: $white;
+    grid-gap: 20px;
+  }
+
+  @media screen and (max-width: 576px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
