--- a/src/components/ApartmentCard/ApartmentCard.module.scss
+++ b/src/components/ApartmentCard/ApartmentCard.module.scss
@@ -1,10 +1,11 @@
 @import '../../style/variables';
 
 .card {
-  width: 340px;
-  height: 340px;
+  width: 100%;
+  height: 100%;
   border-radius: $little-radius;
   position: relative;
+  margin: 0 auto;
 
   &::after {
     @include layer;
