--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -7,6 +7,11 @@
   position: relative;
   overflow: hidden;
 
+  @media screen and (max-width: 576px) {
+    height: 255px;
+    margin-bottom: 15px;
+  }
+
   .imgsBox {
     display: flex;
     height: 100%;
@@ -15,6 +20,10 @@
       width: 100%;
       flex-shrink: 0;
       border-radius: $big-radius;
+
+      @media screen and (max-width: 576px) {
+        border-radius: $little-radius;
+      }
 
       img {
         width: 100%;
@@ -26,19 +35,50 @@
   }
 
   .arrow {
-    height: 80px;
     position: absolute;
     top: calc(50% - 80px/2);
     cursor: pointer;
     z-index: 1;
+
+    @media screen and (max-width: 992px) {
+      top: calc(50% - 50px/2);
+    }
+
+    @media screen and (max-width: 576px) {
+      top: calc(50% - 20px/2);
+    }
+
+    svg {
+      width: 48px;
+      height: 80px;
+
+      @media screen and (max-width: 992px) {
+        width: 30px;
+        height: 50px;
+      }
+
+      @media screen and (max-width: 576px) {
+        width: 12px;
+        height: 20px;
+      }
+    }
+
   }
 
   .arrowLeft {
     left: 23px;
+
+    @media screen and (max-width: 576px) {
+      left: 6px;
+    }
   }
 
   .arrowRight {
     right: 23px;
+
+    @media screen and (max-width: 576px) {
+      right: 6px;
+    }
   }
 }
 
