--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -16,5 +16,9 @@
   p {
     color: $white;
     font-size: 2.4rem;
+
+    @media screen and (max-width: 768px) {
+      font-size: 1.2rem;
+    }
   }
 }
