--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -10,6 +10,15 @@
     font-weight: 500;
     margin-left: 3.5em;
     font-size: 2.4rem;
+
+    @media screen and (max-width: 768px) {
+      margin-left: 1.5em;
+    }
+
+    @media screen and (max-width: 576px) {
+      font-size: 1.2rem;
+      text-transform: uppercase;
+    }
   }
 
   .active {
