--- a/src/pages/Error404/Error404.module.scss
+++ b/src/pages/Error404/Error404.module.scss
@@ -4,20 +4,36 @@
   @include center-in-box;
   flex-direction: column;
   padding-top: 50px;
+  width: 80%;
+  margin: 0 auto;
   gap: 50px;
+
+  @media screen and (max-width: 992px) {
+    padding-top: 200px;
+  }
 
   .title {
     font-size: 28.8rem;
     font-weight: 700;
+
+    @media screen and (max-width: 992px) {
+      font-size: 9.6rem;
+    }
   }
 
   p {
     font-weight: 500;
     font-size: 3.6rem;
+    text-align: center;
+
+    @media screen and (max-width: 992px) {
+      font-size: 1.8rem;
+    }
   }
 
   .link {
     color: $primary;
+    text-align: center;
   }
 }
 
