--- a/src/components/ApartmentCard/ApartmentCard.module.scss
+++ b/src/components/ApartmentCard/ApartmentCard.module.scss
@@ -2,10 +2,14 @@
 
 .card {
   width: 100%;
-  height: 100%;
+  height: 340px;
   border-radius: $little-radius;
   position: relative;
   margin: 0 auto;
+
+  @media screen and (max-width: 768px) {
+    height: 255px;
+  }
 
   &::after {
     @include layer;
