--- a/src/components/Collapse/Collapse.module.scss
+++ b/src/components/Collapse/Collapse.module.scss
@@ -18,6 +18,16 @@
     font-weight: 500;
     transform: translateY($little-radius);
 
+    @media screen and (max-width: 768px) {
+      font-size: 13px;
+      padding: 10px 15px;
+      border-radius: 5px;
+
+      img {
+        width: 15px;
+      }
+    }
+
     .down {
       transform: rotate(540deg);
       transition: transform ease-in 0.3s;
@@ -40,6 +50,11 @@
       z-index: 0;
       transform-origin: top center;
       transform: scaleY(0);
+
+      @media screen and (max-width: 768px) {
+        font-size: 12px;
+        padding-top: 23px;
+      }
     }
 
     .open {
